--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
 .navbar nav ul li a {
     text-decoration: none;
     color: #333;
+    font-weight: bolder;
 }
 
 /* Hero section styles */
@@ -81,6 +82,7 @@ body {
     justify-content: center;
     align-items: center;
     color: white;
+    font-weight: bolder;
     text-align: center;
 }
 
